# slang

./: .gitignore
binaries/netcoreapp3.1-debug/: ConsoleApp5.runtimeconfig.dev.json
codegen/: Directory.build.props  Generator.cs  Program.cs  ilgen.sln
codegen/app/: Program.cs  app.csproj
codegen/netcore/: ilgen-netcore.csproj
codegen/netfx/: ilgen-netfx.csproj
codegen/repro/: Program.cs  repro.csproj
cpp/src/: CMakeLists.txt  test.sl
cpp/src/slang/: CMakeLists.txt  buffer.cpp  buffer.h  list.h  main.cpp  util.cpp  util.h
csharp/src/: readme.md
csharp/src-v1/: slang.sln
csharp/src-v1/Slang/: RuntimeException.cs  Slang.csproj  Unit.cs
csharp/src-v1/examples/: hello.sl
csharp/src-v1/scratch/: TestFormatter.cs
csharp/src-v1/sl/: sl.csproj
csharp/src/Slang/: GlobalSuppressions.cs  Slang.csproj  Unit.cs
csharp/src/scratch/: Program.cs  scratch.csproj
csharp/src/sl/: GlobalSuppressions.cs  Program.cs  TokensPrettifier.cs
doc/: design.md  precedences.md  slang.ebnf
misc/: readme.md
misc/npicol/: npicol.sln
misc/npicol/npicol/: Interpreter.cs  InterpreterData.cs  Mem.cs  Parser.cs  Program.cs  RuntimeCommands.cs  RuntimeLib.cs  enums_and_structs.cs  npicol.csproj
slang/src/Delta.Slang/: .editorconfig  .runsettings  Delta.Slang.sln
src/Delta.Slang/: .editorconfig  Delta.Slang.sln
src/Delta.Slang/sli/: sli.csproj  (+1 more)
src/Slang/: GlobalSuppressions.cs  InternalsVisibleTo.cs  RuntimeException.cs  Slang.csproj
src/examples/: hello.sl
src/scratch/: Program.cs
src/sl/: Program.cs  sl.csproj
zig/: build.zig
zig/src/: lex.zig  main.zig
(+304 files in other folders)
